kubernetes/gitea/base/dragonfly/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: gitea
spec:
  podSelector:
    matchLabels:
      app: gitea-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              app: gitea-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              app: gitea-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-gitea
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: gitea
spec:
  podSelector:
    matchLabels:
      app: gitea-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              app: gitea
              app.kubernetes.io/instance: gitea
              app.kubernetes.io/name: gitea
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-gitea-egress
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: gitea
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              app: gitea-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-dragonfly
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: gitea
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: gitea-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.100/32 # OKD HaProxy
        - ipBlock:
            cidr: 10.0.0.131/32 # OKD KubVip
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-operator-system
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: gitea
spec:
  podSelector:
    matchLabels:
      app: gitea-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dragonfly-operator-system
          podSelector:
            matchLabels:
              control-plane: controller-manager
      ports:
        - protocol: TCP
          port: 9999
